--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
-dock_hsplit_1=456
+dock_hsplit_1=332
 dock_hsplit_2=170
 dock_hsplit_3=-267
 dock_hsplit_4=0
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn", "res://music_player.tscn")
-current_scene="res://mob.tscn"
+current_scene="res://player.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://main.gd", "res://mob.gd", "res://player.gd", "res://score_label.gd"]
-selected_script="res://mob.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
