--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="/app/bin/godot-bin"
+executable_path="/usr/bin/godot"
 use_advanced_connections=false
 
 [dialog_bounds]
