--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -8,7 +8,7 @@ dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
 dock_split_3=0
-dock_hsplit_1=332
+dock_hsplit_1=280
 dock_hsplit_2=170
 dock_hsplit_3=-267
 dock_hsplit_4=0
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://mob.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_2_selected_tab_idx=0
 dock_split_1=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://main.gd", "res://mob.gd", "res://player.gd", "res://score_label.gd"]
+open_scripts=["res://global_score.gd", "res://main.gd", "res://mob.gd", "res://player.gd", "res://score_label.gd"]
 selected_script="res://player.gd"
 open_help=[]
 script_split_offset=150
