--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
-"folded_lines": Array[int]([]),
+"column": 55,
+"folded_lines": Array[int]([12, 19, 21, 23, 25, 28, 33, 51, 84]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
+"row": 79,
+"scroll_position": 44.6667,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
-"folded_lines": Array[int]([]),
+"column": 44,
+"folded_lines": Array[int]([6, 9, 25]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 48,
-"folded_lines": Array[int]([]),
+"column": 0,
+"folded_lines": Array[int]([3, 19, 22, 27]),
 "h_scroll_position": 0,
 "row": 19,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 39,
+"selection_from_line": 11,
+"selection_to_column": 0,
+"selection_to_line": 19,
 "syntax_highlighter": "GDScript"
 }
 
@@ -45,7 +49,21 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 2,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://global_score.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
