Dust cloud model

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 55,
+"column": 40,
 "folded_lines": Array[int]([12, 19, 21, 23, 25, 28, 33, 51, 84]),
 "h_scroll_position": 0,
-"row": 79,
-"scroll_position": 44.6667,
+"row": 36,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -18,7 +18,7 @@ state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 44,
-"folded_lines": Array[int]([6, 9, 25]),
+"folded_lines": Array[int]([25]),
 "h_scroll_position": 0,
 "row": 6,
 "scroll_position": 0.0,
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([3, 19, 22, 27]),
+"column": 61,
+"folded_lines": Array[int]([27]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 8,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 39,
-"selection_from_line": 11,
-"selection_to_column": 0,
-"selection_to_line": 19,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
