--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,32 +7,34 @@ dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
-dock_split_3=0
-dock_hsplit_1=280
+dock_split_3=-189
+dock_hsplit_1=233
 dock_hsplit_2=170
-dock_hsplit_3=-267
+dock_hsplit_3=-433
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
-dock_filesystem_display_mode=0
+dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
-dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_file_list_display_mode=0
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://art/")
 dock_2_selected_tab_idx=0
 dock_split_1=0
 dock_1_selected_tab_idx=0
-dock_1="Scene,Import"
-dock_2="FileSystem"
-dock_5="Inspector,Node,History"
+dock_7_selected_tab_idx=0
+dock_split_4=0
+dock_6_selected_tab_idx=0
+dock_5="Scene,Import"
+dock_6="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn", "res://music_player.tscn")
-current_scene="res://player.tscn"
-center_split_offset=-252
+open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn", "res://dust_cloud.tscn")
+current_scene="res://dust_cloud.tscn"
+center_split_offset=-330
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -46,7 +48,7 @@ zoom_factor=1.0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://art/materials/rug_material.gdshader"]
 split_offset=0
-selected_shader=""
+selected_shader="res://art/materials/rug_material.gdshader"
 text_shader_zoom_factor=1.0
