--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -7,10 +7,10 @@ dock_floating={}
 dock_bottom=[]
 dock_closed=[]
 dock_split_2=0
-dock_split_3=-189
+dock_split_3=-33
 dock_hsplit_1=233
 dock_hsplit_2=170
-dock_hsplit_3=-433
+dock_hsplit_3=-463
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=2
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
 dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://art/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_2_selected_tab_idx=0
 dock_split_1=0
 dock_1_selected_tab_idx=0
@@ -30,18 +30,17 @@ dock_6="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn", "res://dust_cloud.tscn")
-current_scene="res://dust_cloud.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://player.tscn", "res://mob.tscn", "res://dust_cloud.tscn", "res://music_player.tscn", "res://ComboCircle.tscn")
+current_scene="res://ComboCircle.tscn"
 center_split_offset=-330
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://global_score.gd", "res://main.gd", "res://mob.gd", "res://player.gd", "res://score_label.gd"]
-selected_script="res://player.gd"
-open_help=[]
+open_scripts=["res://combo_timer.gd", "res://global_score.gd", "res://main.gd", "res://mob.gd", "res://player.gd", "res://score_label.gd"]
+selected_script="res://combo_timer.gd"
+open_help=["Timer"]
 script_split_offset=150
 list_split_offset=0
 zoom_factor=1.0
@@ -52,3 +51,13 @@ open_shaders=["res://art/materials/rug_material.gdshader"]
 split_offset=0
 selected_shader="res://art/materials/rug_material.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=true
+show_search=true
