--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 40,
-"folded_lines": Array[int]([12, 19, 21, 23, 25, 28, 33, 51, 84]),
+"column": 39,
+"folded_lines": Array[int]([40, 51, 60, 63]),
 "h_scroll_position": 0,
-"row": 36,
+"row": 87,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,10 +31,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 61,
+"column": 37,
 "folded_lines": Array[int]([27]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -63,6 +63,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://combo_timer.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([11, 20]),
+"h_scroll_position": 0,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
